feat: Add logging suppression to all notebooks
- Suppress verbose JSON connector logs (INFO level)
- Show only warnings and errors from data connectors
- Keeps print() statements and results visible
- Applied to all 6 KASS notebooks

--- a/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
+++ b/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
@@ -5,7 +5,7 @@
    "id": "ff889df4",
    "metadata": {},
    "source": [
-    "📊 **DATA PROVENANCE:** Real BLS/FRED macro data + Synthetic metro-level outcomes | See Limitations section for details\n",
+    "\ud83d\udcca **DATA PROVENANCE:** Real BLS/FRED macro data + Synthetic metro-level outcomes | See Limitations section for details\n",
     "\n",
     "---\n",
     "\n",
@@ -51,7 +51,7 @@
     "\n",
     "---\n",
     "\n",
-    "⚠️ **Analytical Framework Note:** This notebook performs **descriptive analytics**, not causal inference. Correlations and patterns identified should be interpreted as associations, not causal effects. See the Limitations section for proper interpretation guidance."
+    "\u26a0\ufe0f **Analytical Framework Note:** This notebook performs **descriptive analytics**, not causal inference. Correlations and patterns identified should be interpreted as associations, not causal effects. See the Limitations section for proper interpretation guidance."
    ]
   },
   {
@@ -85,8 +85,8 @@
     "This notebook implements a **descriptive analytics pipeline** for labor market intelligence:\n",
     "\n",
     "```\n",
-    "Data Collection → Indicator Construction → Pattern Detection → Visualization\n",
-    "     ↓                    ↓                       ↓                ↓\n",
+    "Data Collection \u2192 Indicator Construction \u2192 Pattern Detection \u2192 Visualization\n",
+    "     \u2193                    \u2193                       \u2193                \u2193\n",
     "  BLS/FRED          LQ, Shift-Share        STL Anomaly        Dashboards\n",
     "```\n",
     "\n",
@@ -96,10 +96,10 @@
     "\n",
     "| Application | Descriptive Intelligence | Causal Analysis Needed |\n",
     "|-------------|-------------------------|----------------------|\n",
-    "| Economic monitoring | ✅ This notebook | ❌ Not required |\n",
-    "| Training needs assessment | ✅ Partial (skill gaps) | ⚠️ For ROI claims |\n",
-    "| Regional planning | ✅ Industry analysis | ⚠️ For intervention effects |\n",
-    "| Policy evaluation | ⚠️ Context only | ✅ See causal inference notebooks |\n",
+    "| Economic monitoring | \u2705 This notebook | \u274c Not required |\n",
+    "| Training needs assessment | \u2705 Partial (skill gaps) | \u26a0\ufe0f For ROI claims |\n",
+    "| Regional planning | \u2705 Industry analysis | \u26a0\ufe0f For intervention effects |\n",
+    "| Policy evaluation | \u26a0\ufe0f Context only | \u2705 See causal inference notebooks |\n",
     "\n",
     "### Data Sources\n",
     "\n",
@@ -210,6 +210,14 @@
     "# =============================================================================\n",
     "# KRL Suite Imports\n",
     "# =============================================================================\n",
+    "# =============================================================================\n",
+    "# Suppress verbose connector logging (show only warnings/errors)\n",
+    "# =============================================================================\n",
+    "import logging\n",
+    "for _logger_name in ['FREDFullConnector', 'FREDBasicConnector', 'BLSBasicConnector', \n",
+    "                     'BLSEnhancedConnector', 'CensusConnector', 'krl_data_connectors']:\n",
+    "    logging.getLogger(_logger_name).setLevel(logging.WARNING)\n",
+    "\n",
     "from krl_data_connectors.community import (\n",
     "    BLSBasicConnector,\n",
     "    FREDBasicConnector,\n",
@@ -224,10 +232,10 @@
     "COLORBLIND_SAFE = ['#0072B2', '#E69F00', '#009E73', '#CC79A7', '#56B4E9', '#D55E00']\n",
     "\n",
     "print(\"=\" * 65)\n",
-    "print(\"👷 Labor Market Intelligence Analysis\")\n",
+    "print(\"\ud83d\udc77 Labor Market Intelligence Analysis\")\n",
     "print(\"=\" * 65)\n",
-    "print(f\"📅 Execution Time: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
-    "print(f\"🔑 FRED API Key: {'✓ Loaded' if os.getenv('FRED_API_KEY') else '✗ Not found'}\")\n",
+    "print(f\"\ud83d\udcc5 Execution Time: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "print(f\"\ud83d\udd11 FRED API Key: {'\u2713 Loaded' if os.getenv('FRED_API_KEY') else '\u2717 Not found'}\")\n",
     "print(\"=\" * 65)"
    ]
   },
@@ -244,14 +252,14 @@
     "bls = BLSBasicConnector()\n",
     "fred = FREDBasicConnector()\n",
     "\n",
-    "print(\"✓ KRL Data Connectors initialized:\")\n",
-    "print(f\"   • BLSBasicConnector - Labor statistics\")\n",
-    "print(f\"   • FREDBasicConnector - Economic indicators\")\n",
+    "print(\"\u2713 KRL Data Connectors initialized:\")\n",
+    "print(f\"   \u2022 BLSBasicConnector - Labor statistics\")\n",
+    "print(f\"   \u2022 FREDBasicConnector - Economic indicators\")\n",
     "\n",
-    "print(f\"\\n📊 Available BLS Series (Community Tier):\")\n",
-    "print(f\"   • LNS14000000 - Unemployment Rate\")\n",
-    "print(f\"   • CUUR0000SA0 - CPI All Urban Consumers\")\n",
-    "print(f\"   • CES0000000001 - Total Nonfarm Employment\")"
+    "print(f\"\\n\ud83d\udcca Available BLS Series (Community Tier):\")\n",
+    "print(f\"   \u2022 LNS14000000 - Unemployment Rate\")\n",
+    "print(f\"   \u2022 CUUR0000SA0 - CPI All Urban Consumers\")\n",
+    "print(f\"   \u2022 CES0000000001 - Total Nonfarm Employment\")"
    ]
   },
   {
@@ -281,11 +289,11 @@
     "# Get unemployment rate from BLS\n",
     "try:\n",
     "    unemployment = bls.get_unemployment_rate()\n",
-    "    print(f\"✓ BLS Unemployment Rate: {len(unemployment)} observations\")\n",
+    "    print(f\"\u2713 BLS Unemployment Rate: {len(unemployment)} observations\")\n",
     "except Exception as e:\n",
     "    raise RuntimeError(\n",
     "        f\"BLS API connection failed: {e}\\n\\n\"\n",
-    "        \"⚠️ REPRODUCIBILITY REQUIREMENT: This notebook requires live API access.\\n\"\n",
+    "        \"\u26a0\ufe0f REPRODUCIBILITY REQUIREMENT: This notebook requires live API access.\\n\"\n",
     "        \"   1. Set environment variable: BLS_API_KEY=your_key_here\\n\"\n",
     "        \"   2. Obtain key from: https://data.bls.gov/registrationEngine/\\n\"\n",
     "        \"   3. Simulated data is NOT acceptable for institutional analysis.\\n\"\n",
@@ -295,27 +303,27 @@
     "# Get CPI from BLS\n",
     "try:\n",
     "    cpi_data = bls.get_cpi()\n",
-    "    print(f\"✓ BLS CPI: {len(cpi_data)} observations\")\n",
+    "    print(f\"\u2713 BLS CPI: {len(cpi_data)} observations\")\n",
     "except Exception as e:\n",
     "    raise RuntimeError(\n",
     "        f\"BLS CPI retrieval failed: {e}\\n\\n\"\n",
-    "        \"⚠️ REPRODUCIBILITY REQUIREMENT: CPI data required for real wage analysis.\\n\"\n",
+    "        \"\u26a0\ufe0f REPRODUCIBILITY REQUIREMENT: CPI data required for real wage analysis.\\n\"\n",
     "        \"   Ensure BLS_API_KEY is set and has proper access permissions.\"\n",
     "    )\n",
     "\n",
     "# Get GDP from FRED for economic context\n",
     "try:\n",
     "    gdp_data = fred.get_series('GDP', start_date='2015-01-01', end_date='2024-12-31')\n",
-    "    print(f\"✓ FRED GDP: {len(gdp_data)} observations\")\n",
+    "    print(f\"\u2713 FRED GDP: {len(gdp_data)} observations\")\n",
     "except Exception as e:\n",
     "    raise RuntimeError(\n",
     "        f\"FRED API connection failed: {e}\\n\\n\"\n",
-    "        \"⚠️ REPRODUCIBILITY REQUIREMENT: FRED data required for economic context.\\n\"\n",
+    "        \"\u26a0\ufe0f REPRODUCIBILITY REQUIREMENT: FRED data required for economic context.\\n\"\n",
     "        \"   1. Set environment variable: FRED_API_KEY=your_key_here\\n\"\n",
     "        \"   2. Obtain key from: https://fred.stlouisfed.org/docs/api/api_key.html\"\n",
     "    )\n",
     "\n",
-    "print(f\"\\n✓ Labor market data collection complete\")"
+    "print(f\"\\n\u2713 Labor market data collection complete\")"
    ]
   },
   {
@@ -521,7 +529,7 @@
     "print(\"\\nNumber of metros classified as 'critical' under different thresholds:\\n\")\n",
     "print(sensitivity_df[['Threshold', 'Tech Critical', 'Healthcare Critical', 'Trades Critical', 'Overall Critical', '% Critical (Overall)']].to_string(index=False))\n",
     "print(\"\\n\" + \"-\" * 70)\n",
-    "print(\"⚠️  INTERPRETATION: Results are HIGHLY sensitive to threshold choice.\")\n",
+    "print(\"\u26a0\ufe0f  INTERPRETATION: Results are HIGHLY sensitive to threshold choice.\")\n",
     "print(\"    Classification rates range from ~16% to ~75% across tested thresholds.\")\n",
     "print(\"    The 0.40 threshold is a provisional benchmark only.\")\n",
     "print(\"\\\\n    VALIDATION REQUIRED: Before policy application, validate threshold\")\n",
@@ -758,20 +766,20 @@
     "print(\"LABOR MARKET INTELLIGENCE: KEY FINDINGS\")\n",
     "print(\"=\"*70)\n",
     "\n",
-    "print(f\"\\n🤖 AUTOMATION RISK:\")\n",
-    "print(f\"   • {critical_auto} metros at Critical Risk\")\n",
-    "print(f\"   • {high_auto} metros at High Risk\")\n",
-    "print(f\"   • {auto_pop/1e6:.1f}M workers in high-exposure metros\")\n",
+    "print(f\"\\n\ud83e\udd16 AUTOMATION RISK:\")\n",
+    "print(f\"   \u2022 {critical_auto} metros at Critical Risk\")\n",
+    "print(f\"   \u2022 {high_auto} metros at High Risk\")\n",
+    "print(f\"   \u2022 {auto_pop/1e6:.1f}M workers in high-exposure metros\")\n",
     "\n",
-    "print(f\"\\n📚 SKILLS GAPS:\")\n",
-    "print(f\"   • Average skills gap index: {avg_skills_gap:.2f}\")\n",
-    "print(f\"   • {len(critical_skills)} metros with critical skills deficits\")\n",
+    "print(f\"\\n\ud83d\udcda SKILLS GAPS:\")\n",
+    "print(f\"   \u2022 Average skills gap index: {avg_skills_gap:.2f}\")\n",
+    "print(f\"   \u2022 {len(critical_skills)} metros with critical skills deficits\")\n",
     "\n",
-    "print(f\"\\n💰 WAGE DYNAMICS:\")\n",
-    "print(f\"   • {wage_decline_pct:.0f}% of metros show middle-skill wage decline\")\n",
-    "print(f\"   • Average inequality ratio: {indexed_labor['wage_inequality_ratio'].mean():.1f}x\")\n",
+    "print(f\"\\n\ud83d\udcb0 WAGE DYNAMICS:\")\n",
+    "print(f\"   \u2022 {wage_decline_pct:.0f}% of metros show middle-skill wage decline\")\n",
+    "print(f\"   \u2022 Average inequality ratio: {indexed_labor['wage_inequality_ratio'].mean():.1f}x\")\n",
     "\n",
-    "print(f\"\\n💡 POLICY RECOMMENDATIONS:\")\n",
+    "print(f\"\\n\ud83d\udca1 POLICY RECOMMENDATIONS:\")\n",
     "print(f\"   1. Prioritize upskilling in high-automation-risk metros\")\n",
     "print(f\"   2. Expand apprenticeship and credential programs\")\n",
     "print(f\"   3. Target tech talent pipeline in deficit areas\")\n",
@@ -810,7 +818,7 @@
     "### What This Analysis DOES NOT Show\n",
     "\n",
     "1. **Causal Effects**\n",
-    "   - Correlations ≠ causation\n",
+    "   - Correlations \u2260 causation\n",
     "   - Cannot determine if policy X *caused* employment change Y\n",
     "   - Confounding factors may explain observed associations\n",
     "\n",
@@ -831,23 +839,23 @@
     "\n",
     "### Common Misinterpretations to AVOID\n",
     "\n",
-    "| ❌ Incorrect Interpretation | ✅ Correct Interpretation |\n",
+    "| \u274c Incorrect Interpretation | \u2705 Correct Interpretation |\n",
     "|----------------------------|--------------------------|\n",
     "| \"Unemployment dropped *because* GDP grew\" | \"Unemployment and GDP are negatively correlated\" |\n",
-    "| \"Training programs work—skills improved\" | \"Regions with training programs have higher skills on average\" |\n",
+    "| \"Training programs work\u2014skills improved\" | \"Regions with training programs have higher skills on average\" |\n",
     "| \"This metro *should* invest in tech\" | \"This metro has lower tech specialization than peers\" |\n",
     "| \"The policy caused the recovery\" | \"Recovery coincided with policy implementation\" |\n",
     "\n",
     "### Appropriate Uses of This Analysis\n",
     "\n",
-    "**✅ Appropriate:**\n",
+    "**\u2705 Appropriate:**\n",
     "- Monitoring economic conditions in real-time\n",
     "- Identifying regions for further investigation\n",
     "- Contextualizing causal studies\n",
     "- Generating hypotheses for rigorous testing\n",
     "- Benchmarking against peers\n",
     "\n",
-    "**❌ Not Appropriate:**\n",
+    "**\u274c Not Appropriate:**\n",
     "- Claiming policy caused observed outcomes\n",
     "- Recommending specific interventions\n",
     "- Predicting effects of untested policies\n",
@@ -887,7 +895,7 @@
     "3. **Autor, D. H., Dorn, D., & Hanson, G. H. (2013).** The China Syndrome: Local Labor Market Effects of Import Competition. *American Economic Review*, 103(6), 2121-2168.\n",
     "   - Shift-share instrumental variables approach\n",
     "\n",
-    "4. **Katz, L. F., & Murphy, K. M. (1992).** Changes in Relative Wages, 1963–1987: Supply and Demand Factors. *Quarterly Journal of Economics*, 107(1), 35-78.\n",
+    "4. **Katz, L. F., & Murphy, K. M. (1992).** Changes in Relative Wages, 1963\u20131987: Supply and Demand Factors. *Quarterly Journal of Economics*, 107(1), 35-78.\n",
     "   - Labor supply and demand decomposition framework\n",
     "\n",
     "5. **Cleveland, R. B., Cleveland, W. S., McRae, J. E., & Terpenning, I. (1990).** STL: A Seasonal-Trend Decomposition Procedure Based on Loess. *Journal of Official Statistics*, 6(1), 3-73.\n",
