--- a/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
+++ b/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
@@ -224,6 +224,14 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
+    "# =============================================================================\n",
+    "# Suppress verbose connector logging (show only warnings/errors)\n",
+    "# =============================================================================\n",
+    "import logging\n",
+    "for _logger_name in ['FREDFullConnector', 'FREDBasicConnector', 'BLSBasicConnector', \n",
+    "                     'BLSEnhancedConnector', 'CensusConnector', 'krl_data_connectors']:\n",
+    "    logging.getLogger(_logger_name).setLevel(logging.WARNING)\n",
+    "\n",
     "from krl_core import get_logger\n",
     "from krl_policy.estimators.treatment_effect import TreatmentEffectEstimator\n",
     "\n",
