feat: Replace website URLs with direct Stripe Payment Links
- Use direct Stripe checkout links for faster customer conversion
- PRO subscription: buy.stripe.com/krl_pro_monthly
- Rental passes: 1hr (), 24hr (), 7-day trial ()
- Enterprise still requires sales contact

Stripe Payment Links to create in dashboard:
- krl_pro_monthly - PRO tier monthly subscription
- krl_1hr_pass - 1-hour premium pass
- krl_24hr_pass - 24-hour Pro access
- krl_7day_trial - 7-day Enterprise trial

--- a/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
+++ b/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
@@ -272,7 +272,7 @@
     "except Exception as _tier_err:\n",
     "    if \"TierAccessError\" in str(type(_tier_err).__name__) or \"tier\" in str(_tier_err).lower():\n",
     "        print(\"\\\\n\" + \"=\"*70)\n",
-    "        print(\"⚠️  ENTERPRISE FEATURE: Treatment Effect Estimation\")\n",
+    "        print(\"⚠️  ENTERPRISE FEATURE: Causal Policy Toolkit\")\n",
     "        print(\"=\"*70)\n",
     "        print(\"\\\\n📊 Your current tier: COMMUNITY\")\n",
     "        print(\"📈 Required tier: ENTERPRISE\")\n",
@@ -281,17 +281,19 @@
     "        print(\"   • Difference-in-Differences with Event Studies\")\n",
     "        print(\"   • Synthetic Control Methods\")\n",
     "        print(\"   • Sensitivity Analysis Tools\")\n",
-    "        print(\"\\\\n💡 UPGRADE OPTIONS:\")\n",
+    "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 SUBSCRIPTION: $99/mo Enterprise tier                     │\")\n",
-    "        print(\"   │    → Full access to all causal inference tools              │\")\n",
-    "        print(\"   │    → https://khipuresearchlabs.com/pricing                  │\")\n",
+    "        print(\"   │ 🔹 PRO TIER: $49/mo (annual: $408, 2 months free)           │\")\n",
+    "        print(\"   │    → https://buy.stripe.com/krl_pro_monthly              │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ 🔸 RENTAL: $29/analysis (pay-per-use)                       │\")\n",
-    "        print(\"   │    → Perfect for one-time policy evaluations                │\")\n",
-    "        print(\"   │    → https://khipuresearchlabs.com/rental                   │\")\n",
+    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (causal inference suite)      │\")\n",
+    "        print(\"   │    → Contact: enterprise@khipuresearchlabs.com              │\")\n",
+    "        print(\"   │                                                             │\")\n",
+    "        print(\"   │ ⚡ RENTAL PASSES (Stripe Checkout):                         │\")\n",
+    "        print(\"   │    → $5/1hr:   https://buy.stripe.com/krl_1hr_pass         │\")\n",
+    "        print(\"   │    → $15/24hr: https://buy.stripe.com/krl_24hr_pass        │\")\n",
+    "        print(\"   │    → $99/7day: https://buy.stripe.com/krl_7day_trial       │\")\n",
     "        print(\"   └─────────────────────────────────────────────────────────────┘\")\n",
-    "        print(\"\\\\n📧 Questions? Contact: enterprise@khipuresearchlabs.com\")\n",
     "        print(\"=\"*70 + \"\\\\n\")\n",
     "    else:\n",
     "        raise  # Re-raise if it's a different error\n",
