--- a/notebooks/causal-inference/11-heterogeneous-treatment-effects.ipynb
+++ b/notebooks/causal-inference/11-heterogeneous-treatment-effects.ipynb
@@ -166,7 +166,7 @@
     "except Exception as _tier_err:\n",
     "    if \"TierAccessError\" in str(type(_tier_err).__name__) or \"tier\" in str(_tier_err).lower():\n",
     "        print(\"\\\\n\" + \"=\"*70)\n",
-    "        print(\"⚠️  ENTERPRISE FEATURE: Heterogeneous Treatment Effects\")\n",
+    "        print(\"⚠️  ENTERPRISE FEATURE: Causal Policy Toolkit\")\n",
     "        print(\"=\"*70)\n",
     "        print(\"\\\\n📊 Your current tier: COMMUNITY\")\n",
     "        print(\"📈 Required tier: ENTERPRISE\")\n",
@@ -175,17 +175,20 @@
     "        print(\"   • CausalForest - Individual treatment effects\")\n",
     "        print(\"   • DoubleML - Debiased machine learning\")\n",
     "        print(\"   • Subgroup analysis and targeting\")\n",
-    "        print(\"\\\\n💡 UPGRADE OPTIONS:\")\n",
+    "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 SUBSCRIPTION: $99/mo Enterprise tier                     │\")\n",
-    "        print(\"   │    → Full access to all causal inference tools              │\")\n",
+    "        print(\"   │ 🔹 PRO TIER: $49/mo (annual: $408, 2 months free)           │\")\n",
+    "        print(\"   │    → 50+ data connectors, advanced models                   │\")\n",
     "        print(\"   │    → https://khipuresearchlabs.com/pricing                  │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ 🔸 RENTAL: $29/analysis (pay-per-use)                       │\")\n",
-    "        print(\"   │    → Perfect for one-time HTE analysis                      │\")\n",
+    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (causal inference suite)      │\")\n",
+    "        print(\"   │    → Full krl-causal-policy-toolkit access                  │\")\n",
+    "        print(\"   │    → Contact: enterprise@khipuresearchlabs.com              │\")\n",
+    "        print(\"   │                                                             │\")\n",
+    "        print(\"   │ ⚡ RENTAL: Try before you subscribe                         │\")\n",
+    "        print(\"   │    → $5/hour | $15/24hrs | $99/7-day Enterprise trial       │\")\n",
     "        print(\"   │    → https://khipuresearchlabs.com/rental                   │\")\n",
     "        print(\"   └─────────────────────────────────────────────────────────────┘\")\n",
-    "        print(\"\\\\n📧 Questions? Contact: enterprise@khipuresearchlabs.com\")\n",
     "        print(\"=\"*70 + \"\\\\n\")\n",
     "    else:\n",
     "        raise  # Re-raise if it's a different error\n",
