--- a/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
+++ b/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
@@ -156,36 +156,35 @@
     "# Professional-tier features (FREDFullConnector) imported with fallback.\n",
     "# If your tier doesn't include these, you'll see upgrade options below.\n",
     "\n",
-    "_PROFESSIONAL_AVAILABLE = False\n",
+    "_PRO_AVAILABLE = False\n",
     "FREDFullConnector = None\n",
     "\n",
     "try:\n",
     "    from krl_data_connectors.professional.fred_full import FREDFullConnector\n",
     "    from krl_data_connectors import skip_license_check\n",
-    "    _PROFESSIONAL_AVAILABLE = True\n",
+    "    _PRO_AVAILABLE = True\n",
     "except Exception as _tier_err:\n",
     "    if \"TierAccessError\" in str(type(_tier_err).__name__) or \"tier\" in str(_tier_err).lower():\n",
     "        print(\"\\\\n\" + \"=\"*70)\n",
-    "        print(\"⚠️  PROFESSIONAL FEATURE: Full FRED Data Access\")\n",
+    "        print(\"⚠️  PRO FEATURE: Full FRED Data Access\")\n",
     "        print(\"=\"*70)\n",
     "        print(\"\\\\n📊 Your current tier: COMMUNITY\")\n",
-    "        print(\"📈 Required tier: PROFESSIONAL or higher\")\n",
+    "        print(\"📈 Required tier: PRO or higher\")\n",
     "        print(\"\\\\n🔓 Unlock advanced data capabilities:\")\n",
     "        print(\"   • FREDFullConnector - All 800,000+ FRED series\")\n",
     "        print(\"   • County-level economic data\")\n",
     "        print(\"   • Historical time series (full depth)\")\n",
     "        print(\"   • Batch data retrieval\")\n",
-    "        print(\"\\\\n💡 UPGRADE OPTIONS:\")\n",
+    "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 SUBSCRIPTION: $49/mo Professional tier                   │\")\n",
-    "        print(\"   │    → Full FRED, BLS, and Census data access                 │\")\n",
+    "        print(\"   │ 🔹 PRO TIER: $49/mo (annual: $408, 2 months free)           │\")\n",
+    "        print(\"   │    → 50+ data connectors, full FRED/BLS/Census access       │\")\n",
     "        print(\"   │    → https://khipuresearchlabs.com/pricing                  │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ 🔸 RENTAL: $19/session (pay-per-use)                        │\")\n",
-    "        print(\"   │    → Perfect for one-time data pulls                        │\")\n",
+    "        print(\"   │ ⚡ RENTAL: Try before you subscribe                         │\")\n",
+    "        print(\"   │    → $5/hour | $15/24hrs Pro access                         │\")\n",
     "        print(\"   │    → https://khipuresearchlabs.com/rental                   │\")\n",
     "        print(\"   └─────────────────────────────────────────────────────────────┘\")\n",
-    "        print(\"\\\\n📧 Questions? Contact: support@khipuresearchlabs.com\")\n",
     "        print(\"=\"*70 + \"\\\\n\")\n",
     "        # Fall back to community connector\n",
     "        try:\n",
