fix(notebooks): Update pricing to $149/mo Professional tier
Updated all KASS notebooks with correct Stripe product pricing:
- Professional Monthly: $149/mo (was $49/mo)
- Professional Annual: $1,428/yr (was $408/yr)
- Rental passes remain: $5/1hr, $15/24hr, $99/7-day trial

Notebooks updated:
- NB11 (Heterogeneous Treatment Effects)
- NB14 (Synthetic Control)
- NB15 (RDD Toolkit)
- NB20 (Opportunity Zones)
- NB22 (Workforce ROI)

Also updated CHANGELOG.md with correct pricing.

--- a/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
+++ b/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
@@ -283,10 +283,10 @@
     "        print(\"   • Sensitivity Analysis Tools\")\n",
     "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 PRO TIER: $49/mo (annual: $408, 2 months free)           │\")\n",
+    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)               │\")\n",
     "        print(\"   │    → https://buy.stripe.com/krl_pro_monthly              │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (causal inference suite)      │\")\n",
+    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (full causal suite)          │\")\n",
     "        print(\"   │    → Contact: enterprise@khipuresearchlabs.com              │\")\n",
     "        print(\"   │                                                             │\")\n",
     "        print(\"   │ ⚡ RENTAL PASSES (Stripe Checkout):                         │\")\n",
