--- a/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
+++ b/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
@@ -177,13 +177,12 @@
     "        print(\"   • Batch data retrieval\")\n",
     "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 PRO TIER: $49/mo (annual: $408, 2 months free)           │\")\n",
-    "        print(\"   │    → 50+ data connectors, full FRED/BLS/Census access       │\")\n",
-    "        print(\"   │    → https://khipuresearchlabs.com/pricing                  │\")\n",
+    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)           │\")\n",
+    "        print(\"   │    → https://buy.stripe.com/krl_pro_monthly              │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ ⚡ RENTAL: Try before you subscribe                         │\")\n",
-    "        print(\"   │    → $5/hour | $15/24hrs Pro access                         │\")\n",
-    "        print(\"   │    → https://khipuresearchlabs.com/rental                   │\")\n",
+    "        print(\"   │ ⚡ RENTAL PASSES (Stripe Checkout):                         │\")\n",
+    "        print(\"   │    → $5/1hr:   https://buy.stripe.com/krl_1hr_pass         │\")\n",
+    "        print(\"   │    → $15/24hr: https://buy.stripe.com/krl_24hr_pass        │\")\n",
     "        print(\"   └─────────────────────────────────────────────────────────────┘\")\n",
     "        print(\"=\"*70 + \"\\\\n\")\n",
     "        # Fall back to community connector\n",
