--- a/notebooks/causal-inference/14-synthetic-control-policy-lab.ipynb
+++ b/notebooks/causal-inference/14-synthetic-control-policy-lab.ipynb
@@ -177,17 +177,16 @@
     "        print(\"   • Pre-treatment fit diagnostics\")\n",
     "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 PRO TIER: $49/mo (annual: $408, 2 months free)           │\")\n",
-    "        print(\"   │    → 50+ data connectors, advanced models                   │\")\n",
-    "        print(\"   │    → https://khipuresearchlabs.com/pricing                  │\")\n",
+    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)           │\")\n",
+    "        print(\"   │    → https://buy.stripe.com/krl_pro_monthly              │\")\n",
     "        print(\"   │                                                             │\")\n",
     "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (causal inference suite)      │\")\n",
-    "        print(\"   │    → Full krl-causal-policy-toolkit access                  │\")\n",
     "        print(\"   │    → Contact: enterprise@khipuresearchlabs.com              │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ ⚡ RENTAL: Try before you subscribe                         │\")\n",
-    "        print(\"   │    → $5/hour | $15/24hrs | $99/7-day Enterprise trial       │\")\n",
-    "        print(\"   │    → https://khipuresearchlabs.com/rental                   │\")\n",
+    "        print(\"   │ ⚡ RENTAL PASSES (Stripe Checkout):                         │\")\n",
+    "        print(\"   │    → $5/1hr:   https://buy.stripe.com/krl_1hr_pass         │\")\n",
+    "        print(\"   │    → $15/24hr: https://buy.stripe.com/krl_24hr_pass        │\")\n",
+    "        print(\"   │    → $99/7day: https://buy.stripe.com/krl_7day_trial       │\")\n",
     "        print(\"   └─────────────────────────────────────────────────────────────┘\")\n",
     "        print(\"=\"*70 + \"\\\\n\")\n",
     "    else:\n",
