docs(notebooks): add KRL Suite Components & Pricing section
Each notebook now includes a markdown cell documenting:
- Tools/packages used with their tier (Community/Professional/Enterprise)
- Tier requirements for full functionality
- Subscription options with Stripe Payment Links:
  - Professional: $149/mo
  - Enterprise: Custom pricing
- Rental passes (pay-as-you-go):
  - 1 Hour: $5
  - 24 Hours: $15
  - 7 Days: $99

Notebooks updated:
- 07-labor-market-intelligence (Community tier)
- 11-heterogeneous-treatment-effects (Professional + Enterprise)
- 14-synthetic-control-policy-lab (Professional + Enterprise)
- 15-regression-discontinuity-toolkit (Community with Pro upgrades)
- 20-opportunity-zone-evaluation (Professional + Enterprise)
- 22-workforce-development-roi (Professional + Enterprise)

--- a/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
+++ b/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
@@ -61,6 +61,42 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \ud83d\udce6 KRL Suite Components & Pricing\n",
+    "\n",
+    "This notebook uses the following KRL packages and tools:\n",
+    "\n",
+    "| Component | Package | Tier | Description |\n",
+    "|-----------|---------|------|-------------|\n",
+    "| `FREDFullConnector` | `krl-data-connectors` | \ud83d\udd35 Professional | Full FRED access (800k+ series) |\n",
+    "| `FREDBasicConnector` | `krl-data-connectors` | \ud83d\udfe2 Community | Limited FRED access (fallback) |\n",
+    "| `RegressionDiscontinuity` | `krl-causal-policy-toolkit` | \ud83d\udfe2 Community | Basic sharp RDD |\n",
+    "| `OptimalBandwidth` | `krl-causal-policy-toolkit` | \ud83d\udd35 Professional | IK, CCT bandwidth selection |\n",
+    "| `FuzzyRDD` | `krl-causal-policy-toolkit` | \ud83d\udd35 Professional | Imperfect compliance models |\n",
+    "| `get_logger` | `krl-core` | \ud83d\udfe2 Community | Logging utilities |\n",
+    "\n",
+    "### \ud83d\udd13 Upgrade Options\n",
+    "\n",
+    "| Tier | Price | Features | Subscribe |\n",
+    "|------|-------|----------|-----------|\n",
+    "| **Community** | Free | Basic connectors, core models | [GitHub](https://github.com/KhipuResearch) |\n",
+    "| **Professional** | $149/mo | Full FRED access (800k+ series), advanced models | [Subscribe \u2192](https://buy.stripe.com/5kA8Am4hP9wE5qg3ce) |\n",
+    "| **Enterprise** | Custom | Full platform, dedicated support | [Contact Sales](mailto:enterprise@khipuresearchlabs.com) |\n",
+    "\n",
+    "### \u26a1 Rental Passes (Pay-As-You-Go)\n",
+    "\n",
+    "| Duration | Price | Best For | Get Access |\n",
+    "|----------|-------|----------|------------|\n",
+    "| 1 Hour | $5 | Quick analysis | [Buy Pass \u2192](https://buy.stripe.com/krl_1hr_pass) |\n",
+    "| 24 Hours | $15 | Day project | [Buy Pass \u2192](https://buy.stripe.com/krl_24hr_pass) |\n",
+    "| 7 Days | $99 | Extended trial | [Buy Pass \u2192](https://buy.stripe.com/krl_7day_trial) |\n",
+    "\n",
+    "> \ud83d\udca1 **Tip**: This notebook runs on **Community tier** with basic features. Upgrade to Professional for optimal bandwidth selection and fuzzy RDD capabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d9ce759",
    "metadata": {},
    "source": [
