--- a/notebooks/causal-inference/14-synthetic-control-policy-lab.ipynb
+++ b/notebooks/causal-inference/14-synthetic-control-policy-lab.ipynb
@@ -61,6 +61,39 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \ud83d\udce6 KRL Suite Components & Pricing\n",
+    "\n",
+    "This notebook uses the following KRL packages and tools:\n",
+    "\n",
+    "| Component | Package | Tier | Description |\n",
+    "|-----------|---------|------|-------------|\n",
+    "| `FREDFullConnector` | `krl-data-connectors` | \ud83d\udd35 Professional | Full FRED access (800k+ series) |\n",
+    "| `SyntheticControlMethod` | `krl-causal-policy-toolkit` | \ud83d\udfe3 Enterprise | Abadie-Diamond-Hainmueller estimator |\n",
+    "| `get_logger` | `krl-core` | \ud83d\udfe2 Community | Logging utilities |\n",
+    "\n",
+    "### \ud83d\udd13 Upgrade Options\n",
+    "\n",
+    "| Tier | Price | Features | Subscribe |\n",
+    "|------|-------|----------|-----------|\n",
+    "| **Community** | Free | Basic connectors, core models | [GitHub](https://github.com/KhipuResearch) |\n",
+    "| **Professional** | $149/mo | Full FRED access (800k+ series), advanced models | [Subscribe \u2192](https://buy.stripe.com/5kA8Am4hP9wE5qg3ce) |\n",
+    "| **Enterprise** | Custom | Full platform, dedicated support | [Contact Sales](mailto:enterprise@khipuresearchlabs.com) |\n",
+    "\n",
+    "### \u26a1 Rental Passes (Pay-As-You-Go)\n",
+    "\n",
+    "| Duration | Price | Best For | Get Access |\n",
+    "|----------|-------|----------|------------|\n",
+    "| 1 Hour | $5 | Quick analysis | [Buy Pass \u2192](https://buy.stripe.com/krl_1hr_pass) |\n",
+    "| 24 Hours | $15 | Day project | [Buy Pass \u2192](https://buy.stripe.com/krl_24hr_pass) |\n",
+    "| 7 Days | $99 | Extended trial | [Buy Pass \u2192](https://buy.stripe.com/krl_7day_trial) |\n",
+    "\n",
+    "> \u26a0\ufe0f **Note**: This notebook requires **Professional tier** for data access. Enterprise causal features gracefully degrade with basic implementations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48704280",
    "metadata": {},
    "source": [
