--- a/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
+++ b/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
@@ -65,6 +65,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0b86733",
    "metadata": {},
    "source": [
     "## \ud83d\udce6 KRL Suite Components & Pricing\n",
@@ -77,13 +78,21 @@
     "| `TreatmentEffectEstimator` | `krl-causal-policy-toolkit` | \ud83d\udfe3 Enterprise | DiD, IPW, Doubly Robust estimation |\n",
     "| `get_logger` | `krl-core` | \ud83d\udfe2 Community | Logging utilities |\n",
     "\n",
+    "### \ud83c\udfaf Tier Requirements\n",
+    "\n",
+    "| Feature | Required Tier | Status |\n",
+    "|---------|---------------|--------|\n",
+    "| County economic data | Professional | Required |\n",
+    "| Causal inference (DiD) | Enterprise | Optional (graceful fallback) |\n",
+    "| Core utilities | Community | \u2705 Included |\n",
+    "\n",
     "### \ud83d\udd13 Upgrade Options\n",
     "\n",
     "| Tier | Price | Features | Subscribe |\n",
     "|------|-------|----------|-----------|\n",
     "| **Community** | Free | Basic connectors, core models | [GitHub](https://github.com/KhipuResearch) |\n",
-    "| **Professional** | $149/mo | Full FRED access (800k+ series), advanced models | [Subscribe \u2192](https://buy.stripe.com/5kA8Am4hP9wE5qg3ce) |\n",
-    "| **Enterprise** | Custom | Full platform, dedicated support | [Contact Sales](mailto:enterprise@khipuresearchlabs.com) |\n",
+    "| **Professional** | $149/mo | Full FRED access (800k+ series), county data | [Subscribe \u2192](https://buy.stripe.com/5kA8Am4hP9wE5qg3ce) |\n",
+    "| **Enterprise** | Custom | Causal Policy Toolkit, dedicated support | [Contact Sales](mailto:enterprise@khipuresearchlabs.com) |\n",
     "\n",
     "### \u26a1 Rental Passes (Pay-As-You-Go)\n",
     "\n",
@@ -214,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "760709f8",
    "metadata": {
     "execution": {
@@ -224,26 +233,7 @@
      "shell.execute_reply": "2025-11-29T17:09:34.386945Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "TierAccessError",
-     "evalue": "[KRL_TIER_ACCESS_ERROR] krl-causal-policy-toolkit requires ENTERPRISE tier. Set KRL_API_KEY environment variable or call krl_core.licensing.configure(). Get your API key at https://khipuresearchlabs.com/account/api-keys",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAPIKeyMissingError\u001b[39m                        Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.krl/krl-suite/krl-causal-policy-toolkit/src/krl_policy/__init__.py:58\u001b[39m, in \u001b[36m_check_license\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     57\u001b[39m validator = get_validator()\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m result = \u001b[43mvalidator\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequired_tier\u001b[49m\u001b[43m=\u001b[49m\u001b[43mTier\u001b[49m\u001b[43m.\u001b[49m\u001b[43mENTERPRISE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (result.valid \u001b[38;5;129;01mand\u001b[39;00m result.tier.level >= Tier.ENTERPRISE.level):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.krl/krl-suite/krl-open-core/src/krl_core/licensing/validator.py:152\u001b[39m, in \u001b[36mLicenseValidator.validate\u001b[39m\u001b[34m(self, api_key, required_tier, required_feature, tokens_required, force_refresh)\u001b[39m\n\u001b[32m    151\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m effective_key:\n\u001b[32m--> \u001b[39m\u001b[32m152\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m APIKeyMissingError()\n\u001b[32m    154\u001b[39m \u001b[38;5;66;03m# Check cache first\u001b[39;00m\n",
-      "\u001b[31mAPIKeyMissingError\u001b[39m: [KRL_API_KEY_MISSING] API key required for this operation. Set KRL_API_KEY environment variable or pass api_key parameter. Get your key at https://khipuresearchlabs.com/pricing",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mTierAccessError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 45\u001b[39m\n\u001b[32m     42\u001b[39m     logging.getLogger(_logger_name).setLevel(logging.WARNING)\n\u001b[32m     44\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkrl_core\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_logger\n\u001b[32m---> \u001b[39m\u001b[32m45\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkrl_policy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mestimators\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtreatment_effect\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TreatmentEffectEstimator\n\u001b[32m     47\u001b[39m \u001b[38;5;66;03m# Import Professional FRED connector\u001b[39;00m\n\u001b[32m     48\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkrl_data_connectors\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprofessional\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfred_full\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FREDFullConnector\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.krl/krl-suite/krl-causal-policy-toolkit/src/krl_policy/__init__.py:81\u001b[39m\n\u001b[32m     78\u001b[39m         _logger.debug(\u001b[33m\"\u001b[39m\u001b[33mkrl_core.licensing not available, skipping license check\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     80\u001b[39m \u001b[38;5;66;03m# Run license check on import\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m81\u001b[39m \u001b[43m_check_license\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     83\u001b[39m \u001b[38;5;66;03m# =============================================================================\u001b[39;00m\n\u001b[32m     84\u001b[39m \u001b[38;5;66;03m# PACKAGE IMPORTS\u001b[39;00m\n\u001b[32m     85\u001b[39m \u001b[38;5;66;03m# =============================================================================\u001b[39;00m\n\u001b[32m     87\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkrl_policy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01m__version__\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m __author__, __license__, __version__\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.krl/krl-suite/krl-causal-policy-toolkit/src/krl_policy/__init__.py:69\u001b[39m, in \u001b[36m_check_license\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     60\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m TierAccessError(\n\u001b[32m     61\u001b[39m                 \u001b[33m\"\u001b[39m\u001b[33mkrl-causal-policy-toolkit requires ENTERPRISE tier. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     62\u001b[39m                 \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mYour tier: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult.tier.value\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     66\u001b[39m                 feature_name=\u001b[33m\"\u001b[39m\u001b[33mkrl-causal-policy-toolkit\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     67\u001b[39m             )\n\u001b[32m     68\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m APIKeyMissingError:\n\u001b[32m---> \u001b[39m\u001b[32m69\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m TierAccessError(\n\u001b[32m     70\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mkrl-causal-policy-toolkit requires ENTERPRISE tier. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     71\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mSet KRL_API_KEY environment variable or call krl_core.licensing.configure(). \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     72\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mGet your API key at https://khipuresearchlabs.com/account/api-keys\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     73\u001b[39m             user_tier=\u001b[33m\"\u001b[39m\u001b[33mcommunity\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     74\u001b[39m             required_tier=\u001b[33m\"\u001b[39m\u001b[33menterprise\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     75\u001b[39m             feature_name=\u001b[33m\"\u001b[39m\u001b[33mkrl-causal-policy-toolkit\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     76\u001b[39m         )\n\u001b[32m     77\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[32m     78\u001b[39m     _logger.debug(\u001b[33m\"\u001b[39m\u001b[33mkrl_core.licensing not available, skipping license check\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mTierAccessError\u001b[39m: [KRL_TIER_ACCESS_ERROR] krl-causal-policy-toolkit requires ENTERPRISE tier. Set KRL_API_KEY environment variable or call krl_core.licensing.configure(). Get your API key at https://khipuresearchlabs.com/account/api-keys"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# =============================================================================\n",
     "# KRL Suite: Environment Setup\n",
@@ -253,8 +243,8 @@
     "    pip install krl-core krl-data-connectors krl-models\n",
     "\n",
     "Development (contributors):\n",
-    "    export KRL_DEV_PATH=\"/path/to/KRL/Private IP\"\n",
-    "    # Or add to ~/.krl/.env\n",
+    "    # Add to ~/.krl/.env:\n",
+    "    # KRL_DEV_PATH=/your/local/path/to/krl-monorepo\n",
     "\"\"\"\n",
     "import os\n",
     "import sys\n",
@@ -281,7 +271,7 @@
     "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\n",
     "    # Developer mode: use local clones\n",
     "    _krl_base = _KRL_DEV_PATH\n",
-    "    for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\", \"krl-geospatial-tools/src\"]:\n",
+    "    for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\", \"krl-geospatial-tools/src\", \"krl-causal-policy-toolkit/src\"]:\n",
     "        _path = os.path.join(_krl_base, _pkg)\n",
     "        if os.path.isdir(_path) and _path not in sys.path:\n",
     "            sys.path.insert(0, _path)\n",
@@ -339,34 +329,39 @@
     "try:\n",
     "    from krl_policy.estimators.treatment_effect import TreatmentEffectEstimator\n",
     "    _ENTERPRISE_AVAILABLE = True\n",
+    "except ImportError:\n",
+    "    # Module not available - will show upgrade options below\n",
+    "    pass\n",
     "except Exception as _tier_err:\n",
-    "    if \"TierAccessError\" in str(type(_tier_err).__name__) or \"tier\" in str(_tier_err).lower():\n",
-    "        print(\"\\\\n\" + \"=\"*70)\n",
-    "        print(\"\u26a0\ufe0f  ENTERPRISE FEATURE: Causal Policy Toolkit\")\n",
-    "        print(\"=\"*70)\n",
-    "        print(\"\\\\n\ud83d\udcca Your current tier: COMMUNITY\")\n",
-    "        print(\"\ud83d\udcc8 Required tier: ENTERPRISE\")\n",
-    "        print(\"\\\\n\ud83d\udd13 Unlock advanced causal inference capabilities:\")\n",
-    "        print(\"   \u2022 Treatment Effect Estimators (DiM, IPW, Doubly Robust)\")\n",
-    "        print(\"   \u2022 Difference-in-Differences with Event Studies\")\n",
-    "        print(\"   \u2022 Synthetic Control Methods\")\n",
-    "        print(\"   \u2022 Sensitivity Analysis Tools\")\n",
-    "        print(\"\\\\n\ud83d\udca1 ACCESS OPTIONS:\")\n",
-    "        print(\"   \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510\")\n",
-    "        print(\"   \u2502 \ud83d\udd39 PROFESSIONAL: $149/mo (annual: $1,428/yr)               \u2502\")\n",
-    "        print(\"   \u2502    \u2192 https://buy.stripe.com/krl_pro_monthly              \u2502\")\n",
-    "        print(\"   \u2502                                                             \u2502\")\n",
-    "        print(\"   \u2502 \ud83d\udd38 ENTERPRISE: Custom pricing (full causal suite)          \u2502\")\n",
-    "        print(\"   \u2502    \u2192 Contact: enterprise@khipuresearchlabs.com              \u2502\")\n",
-    "        print(\"   \u2502                                                             \u2502\")\n",
-    "        print(\"   \u2502 \u26a1 RENTAL PASSES (Stripe Checkout):                         \u2502\")\n",
-    "        print(\"   \u2502    \u2192 $5/1hr:   https://buy.stripe.com/krl_1hr_pass         \u2502\")\n",
-    "        print(\"   \u2502    \u2192 $15/24hr: https://buy.stripe.com/krl_24hr_pass        \u2502\")\n",
-    "        print(\"   \u2502    \u2192 $99/7day: https://buy.stripe.com/krl_7day_trial       \u2502\")\n",
-    "        print(\"   \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\")\n",
-    "        print(\"=\"*70 + \"\\\\n\")\n",
-    "    else:\n",
-    "        raise  # Re-raise if it's a different error\n",
+    "    # Handle TierAccessError or similar tier-restriction errors\n",
+    "    if \"TierAccessError\" not in str(type(_tier_err).__name__) and \"tier\" not in str(_tier_err).lower():\n",
+    "        raise  # Re-raise unexpected errors\n",
+    "\n",
+    "if not _ENTERPRISE_AVAILABLE:\n",
+    "    print(\"\\n\" + \"=\"*70)\n",
+    "    print(\"\u26a0\ufe0f  ENTERPRISE FEATURE: Causal Policy Toolkit\")\n",
+    "    print(\"=\"*70)\n",
+    "    print(\"\\n\ud83d\udcca Your current tier: COMMUNITY\")\n",
+    "    print(\"\ud83d\udcc8 Required tier: ENTERPRISE\")\n",
+    "    print(\"\\n\ud83d\udd13 Unlock advanced causal inference capabilities:\")\n",
+    "    print(\"   \u2022 Treatment Effect Estimators (DiM, IPW, Doubly Robust)\")\n",
+    "    print(\"   \u2022 Difference-in-Differences with Event Studies\")\n",
+    "    print(\"   \u2022 Synthetic Control Methods\")\n",
+    "    print(\"   \u2022 Sensitivity Analysis Tools\")\n",
+    "    print(\"\\n\ud83d\udca1 ACCESS OPTIONS:\")\n",
+    "    print(\"   \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510\")\n",
+    "    print(\"   \u2502 \ud83d\udd39 PROFESSIONAL: $149/mo (annual: $1,428/yr)               \u2502\")\n",
+    "    print(\"   \u2502    \u2192 https://buy.stripe.com/krl_pro_monthly              \u2502\")\n",
+    "    print(\"   \u2502                                                             \u2502\")\n",
+    "    print(\"   \u2502 \ud83d\udd38 ENTERPRISE: Custom pricing (full causal suite)          \u2502\")\n",
+    "    print(\"   \u2502    \u2192 Contact: enterprise@khipuresearchlabs.com              \u2502\")\n",
+    "    print(\"   \u2502                                                             \u2502\")\n",
+    "    print(\"   \u2502 \u26a1 RENTAL PASSES (Stripe Checkout):                         \u2502\")\n",
+    "    print(\"   \u2502    \u2192 $5/1hr:   https://buy.stripe.com/krl_1hr_pass         \u2502\")\n",
+    "    print(\"   \u2502    \u2192 $15/24hr: https://buy.stripe.com/krl_24hr_pass        \u2502\")\n",
+    "    print(\"   \u2502    \u2192 $99/7day: https://buy.stripe.com/krl_7day_trial       \u2502\")\n",
+    "    print(\"   \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\")\n",
+    "    print(\"=\"*70 + \"\\n\")\n",
     "\n",
     "# Import Professional FRED connector\n",
     "from krl_data_connectors.professional.fred_full import FREDFullConnector\n",
@@ -391,7 +386,8 @@
     "print(f\"   \u2022 Difference-in-Differences Impact\")\n",
     "print(f\"   \u2022 Spatial Spillover Effects\")\n",
     "print(f\"\\n\ud83d\udce1 Data Source: FRED Professional (County Economics)\")\n",
-    "print(\"=\"*70)"
+    "print(\"=\"*70)\n",
+    ""
    ]
   },
   {
